tests/fixtures/invalid/min_bool_set.py
# Cannot call min() with Bool, Set[int]
x = min(True, {1, 2, 3})
